testsuite/poke.pkl/trim-diag-2.pk
/* { dg-do compile } */

defvar a = [1,2][10.."foo"]; /* { dg-error "" } */
